# tap-bitso

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tap-bitso.sh  tap_bitso_logging.yaml  tox.ini
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yaml  test.yml
tap_bitso/: __init__.py  auth.py  client.py  streams.py  tap.py
tap_bitso/schemas/: __init__.py  book.json  ledger.json  ticker.json  trade.json
tests/: __init__.py  test_core.py  test_sync.py
