[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.4",
  "hatchling==1.27",
]

[project]
name = "tap-bitso"
description = "`tap-bitso` is a Singer tap for Bitso, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Bitso",
  "ELT",
  "meltano-sdk",
  "singer.io",
]
license.file = "LICENSE"
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.32.3",
  "singer-sdk~=0.44.2",
  "stamina~=25.1.0",
  "structlog>=23,<26",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-bitso#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-bitso"
urls.Repository = "https://github.com/edgarrmondragon/tap-bitso"
scripts."tap-bitso" = "tap_bitso.tap:TapBitso.cli"

[dependency-groups]
dev = [
  "colorama>=0.4.4",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=7.4",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812",
  "DJ",
  "FIX002",
  "ISC001",
  "PD",
]
lint.per-file-ignores."tests/*" = [
  "ANN201",
]
lint.unfixable = [
  "ERA001",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.pytest.ini_options]
addopts = [ "-vvv" ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.5.19"
