[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.27",
]

[project]
name = "tap-bitso"
description = "`tap-bitso` is a Singer tap for Bitso, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Bitso",
  "ELT",
  "meltano-sdk",
  "singer.io",
]
license.file = "LICENSE"
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.32.3",
  "singer-sdk~=0.48.0",
  "stamina~=25.1.0",
  "structlog>=23,<26",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-bitso#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-bitso"
urls.Repository = "https://github.com/edgarrmondragon/tap-bitso"
scripts."tap-bitso" = "tap_bitso.tap:TapBitso.cli"

[dependency-groups]
dev = [
  "colorama>=0.4.4",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=7.4",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "types-requests",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812",
  "DJ",
  "FIX002",
  "ISC001",
  "PD",
]
lint.per-file-ignores."tests/*" = [
  "ANN201",
]
lint.unfixable = [
  "ERA001",
]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = [ "-vvv" ]

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
env_list = [
  "dependencies",
  "typing",
  "3.14",
  "3.13",
  "3.12",
  "3.11",
  "3.10",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_BITSO_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]

[tool.tox.env.sync]
commands = [ [ "tap-bitso", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [ [ "mypy", "--strict", { replace = "posargs", default = [ "tap_bitso", "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.5.19"
